@@ -1097,10 +1097,10 @@ else:
 
 _non_defaults = set('__%s__' % method for method in [
     'cmp', 'getslice', 'setslice', 'coerce', 'subclasses',
-    'dir', 'format', 'get', 'set', 'delete', 'reversed',
+    'format', 'get', 'set', 'delete', 'reversed',
     'missing', 'reduce', 'reduce_ex', 'getinitargs',
     'getnewargs', 'getstate', 'setstate', 'getformat',
-    'setformat', 'repr'
+    'setformat', 'repr', 'dir'
 ])
 
 
